--- a/LyricManager/LyricManager-Info.plist
+++ b/LyricManager/LyricManager-Info.plist
@@ -25,7 +25,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2012 Qumu. All rights reserved.</string>
+	<string>Copyright © 2012 Copyright (c) 2012 Michael Poindexter. All rights reserved. See LICENSE for copying details.. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
